# MavDrone_RL_WS

./: .gitignore  LICENSE  README.md
src/: ws_repo_dep.yaml
src/mavdrone_rl/: CMakeLists.txt  package.xml  setup.py
src/mavdrone_rl/config/: mav_drone_openai_qlearn_params.yaml  mav_drone_openai_qlearn_params_v2.yaml  mavdrone_test.yaml
src/mavdrone_rl/launch/: env.launch  px4_ekf2_start.launch  px4_ekf2_stop.launch  spawn_mavdrone.launch  start_simulation.launch  start_training.launch  start_training_v2.launch  start_world.launch  test_env.launch
src/mavdrone_rl/scripts/: start_qlearning.py  start_qlearning_v2.py  test_env.py  test_env_1.py  test_roslauncher.py
src/mavdrone_rl/scripts/gym_link/: gazebo_connection.py  make_gym_env.py  mav_drone_env.py  reg_gym_env.py  robot_gazebo_env.py  roslauncher.py
src/mavdrone_rl/training_results/: openaigym.episode_batch.0.19448.stats.json  openaigym.manifest.0.19448.manifest.json
src/openai_ros/: README.md
src/openai_ros/src/openai_ros/: gazebo_connection.py  openai_ros_common.py  robot_gazebo_env.py  roslauncher.py
src/openai_ros/src/openai_ros/robot_envs/: mav_drone_env.py  parrotdrone_env.py
src/openai_ros/src/openai_ros/task_envs/: task_envs_list.py
src/openai_ros/src/openai_ros/task_envs/mav_drone/: mav_drone_follow.py
src/openai_ros/src/openai_ros/task_envs/mav_drone/config/: mav_drone_follow.yaml
src/openai_ros/src/openai_ros/task_envs/parrotdrone/: parrotdrone_goto.py
src/openai_ros/src/openai_ros/task_envs/parrotdrone/config/: parrotdrone_goto.yaml
